// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correclty 1`] = `
<li>
  <DrilldownLink
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    component="abcd-key"
    inNewCodePeriod={false}
    metric="open_issues"
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="open_issues"
          metricType="INT"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="open_issues"
          />
          metric.open_issues.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT
           
          1
        </span>
      </div>
    </div>
  </DrilldownLink>
</li>
`;

exports[`should render correclty 2`] = `
<li>
  <ForwardRef(Link)
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?resolved=false&types=BUG&severities=BLOCKER%2CCRITICAL%2CMAJOR%2CMINOR&id=abcd-key",
      }
    }
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="reliability_rating"
          metricType="RATING"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="reliability_rating"
          />
          metric.reliability_rating.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT.rating
           
          A
        </span>
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`should render correclty 3`] = `
<li>
  <ForwardRef(Link)
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?resolved=false&types=VULNERABILITY&severities=BLOCKER%2CCRITICAL%2CMAJOR%2CMINOR&id=abcd-key",
      }
    }
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="security_rating"
          metricType="RATING"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="security_rating"
          />
          metric.security_rating.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT.rating
           
          A
        </span>
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`should render correclty 4`] = `
<li>
  <ForwardRef(Link)
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?resolved=false&types=CODE_SMELL&id=abcd-key",
      }
    }
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="sqale_rating"
          metricType="RATING"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="sqale_rating"
          />
          metric.sqale_rating.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT.rating
           
          A
        </span>
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`should render correclty 5`] = `
<li>
  <ForwardRef(Link)
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?resolved=false&types=BUG&severities=BLOCKER%2CCRITICAL%2CMAJOR%2CMINOR&inNewCodePeriod=true&id=abcd-key",
      }
    }
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="new_reliability_rating"
          metricType="RATING"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="new_reliability_rating"
          />
          metric.new_reliability_rating.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT.rating
           
          A
        </span>
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`should render correclty 6`] = `
<li>
  <ForwardRef(Link)
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?resolved=false&types=VULNERABILITY&severities=BLOCKER%2CCRITICAL%2CMAJOR%2CMINOR&inNewCodePeriod=true&id=abcd-key",
      }
    }
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="new_security_rating"
          metricType="RATING"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="new_security_rating"
          />
          metric.new_security_rating.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT.rating
           
          A
        </span>
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`should render correclty 7`] = `
<li>
  <ForwardRef(Link)
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?resolved=false&types=CODE_SMELL&inNewCodePeriod=true&id=abcd-key",
      }
    }
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="new_maintainability_rating"
          metricType="RATING"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="new_maintainability_rating"
          />
          metric.new_maintainability_rating.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT.rating
           
          A
        </span>
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`should render correclty 8`] = `
<li>
  <ForwardRef(Link)
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    to={
      {
        "hash": "",
        "pathname": "/security_hotspots",
        "search": "?id=abcd-key",
      }
    }
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="security_hotspots_reviewed"
          metricType="RATING"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="security_hotspots_reviewed"
          />
          metric.security_hotspots_reviewed.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT.rating
           
          A
        </span>
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`should render correclty 9`] = `
<li>
  <ForwardRef(Link)
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    to={
      {
        "hash": "",
        "pathname": "/security_hotspots",
        "search": "?id=abcd-key&inNewCodePeriod=true",
      }
    }
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="new_security_hotspots_reviewed"
          metricType="RATING"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="new_security_hotspots_reviewed"
          />
          metric.new_security_hotspots_reviewed.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT.rating
           
          A
        </span>
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`should work with branch 1`] = `
<li>
  <ForwardRef(Link)
    className="overview-quality-gate-condition overview-quality-gate-condition-error"
    to={
      {
        "hash": "",
        "pathname": "/project/issues",
        "search": "?resolved=false&branch=branch-6.7&types=CODE_SMELL&inNewCodePeriod=true&id=abcd-key",
      }
    }
  >
    <div
      className="overview-quality-gate-condition-container display-flex-center"
    >
      <div
        className="overview-quality-gate-condition-value text-center spacer-right"
      >
        <Measure
          decimals={2}
          metricKey="new_maintainability_rating"
          metricType="RATING"
          value="3"
        />
      </div>
      <div>
        <span
          className="overview-quality-gate-condition-metric little-spacer-right"
        >
          <IssueTypeIcon
            className="little-spacer-right"
            query="new_maintainability_rating"
          />
          metric.new_maintainability_rating.name
        </span>
        <span
          className="little-spacer-top small text-muted"
        >
          quality_gates.operator.GT.rating
           
          A
        </span>
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;
